--- a/gallery.html
+++ b/gallery.html
@@ -14,9 +14,9 @@
             <nav>
                 <a href="index.html" >Home</a>
                 <a href="" class="line"> | </a>
-                <a href="">About</a>
+                <a href="about.html">About</a>
                 <a href="" class="line"> | </a>
-                <a href="" class="col"  >Gallery</a>
+                <a href="gallery.html" class="col"  >Gallery</a>
                 <a href="" class="line"> | </a>
                 <a href="contact.html">Contact</a>
                 <button>Enroll Now</button>
@@ -28,49 +28,101 @@
         <div class="gall">
             <div class="gallleft">
                 <figure class="card">
-                    <img src="gallery images/agape-academy-1.jpeg" alt="Agape Academy">
-                    <figcaption>Agape Academy: Excellene In Christ</figcaption>
+                    <img src="gallery images/Ghana  Day kg.3.jpg" alt="Agape Academy">
+                    <figcaption>Ghana Day with Kg-3</figcaption>
                 </figure>
                 <figure class="card">
-                    <img src="gallery images/baim-hanif-pYWuOMhtc6k-unsplash.jpg" alt="Our Graduating Seniors!">
-                    <figcaption>Our Graduating Seniors!</figcaption>
+                    <img src="gallery images/Ghana  Day kg.4.jpg" alt="Our Graduating Seniors!">
+                    <figcaption>Ghana Day with Kg-4</figcaption>
                 </figure>
                 <figure class="card">
-                    <img src="gallery images/150996d5036e9230edc3fc48decaecd4.jpg" alt="Learning in Progress">
-                    <figcaption>Learning in Progress</figcaption>
+                    <img src="gallery images/Ghana day kg.5.jpg" alt="Learning in Progress">
+                    <figcaption>Ghana Day with Kg-5</figcaption>
                 </figure>
             </div>
             <div class="gallmid">
                 <figure class="card">
-                    <img src="gallery images/our pre ks.jpg" alt="">
-                    <figcaption>Our Excited Kids</figcaption>
+                    <img src="gallery images/Ghana day g.3-2.jpg" alt="">
+                    <figcaption>Ghana Day</figcaption>
                 </figure>
                 <figure class="card">
-                    <img src="gallery images/kids in a group.jpg" alt="">
-                    <figcaption>Work in progress</figcaption>
+                    <img src="gallery images/Ghana Day kg.5-2.jpg" alt="">
+                    <figcaption>Ghana Day</figcaption>
                 </figure>
                 <figure class="card">
-                    <img src="gallery images/teens in a group.jpg" alt="">
-                    <figcaption>Locked In.</figcaption>
+                    <img src="gallery images/Ghana day g.3.jpg" alt="">
+                    <figcaption>Ghana Day</figcaption>
                 </figure>
             </div>
 
             <div class="gallright">
                 <figure class="card">
+                    <img src="gallery images/Ghana Day g5-6.jpg" alt="School Trip">
+                    <figcaption>Ghana Day</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="gallery images/Ghana Day.jpg" alt="Main School Building">
+                    <figcaption>Ghana Day</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="gallery images/WhatsApp Image 2025-05-20 at 09.06.51_35ba8299.jpg" alt="Community Gathering">
+                    <figcaption>Ghana Day</figcaption>
+                </figure>
+            </div>
+            
+        </div>
+        <div class="gal2">
+                <div class="gr">
+                <figure class="card">
+                    <img src="gallery images/lower-school-trip-to-a-city.jpg" alt="School Trip">
+                    <figcaption>School Trip</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="gallery images/a-city-lower.jpg" alt="Main School Building">
+                    <figcaption>Science Trip with Middle School</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="gallery images/a-zoo.jpg" alt="Community Gathering">
+                    <figcaption>Children exhibit at Accra</figcaption>
+                </figure>
+            </div>
+            <div class="gr">
+                <figure class="card">
+                    <img src="gallery images/Make your mark.jpg" alt="School Trip">
+                    <figcaption>School Trip</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="gallery images/school-trip.jpeg" alt="Main School Building">
+                    <figcaption>School TRIP</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="gallery images/WhatsApp Image 2025-05-20 at 09.08.28_50a59ea9.jpg" alt="Community Gathering">
+                    <figcaption>Some fun sliding with the kids</figcaption>
+                </figure>
+            </div>
+            <div class="gr">
+                <figure class="card">
                     <img src="gallery images/school-trip.jpeg" alt="School Trip">
                     <figcaption>School Trip</figcaption>
                 </figure>
                 <figure class="card">
-                    <img src="gallery images/School.jpg" alt="Main School Building">
-                    <figcaption>Main School Building</figcaption>
+                    <img src="gallery images/WhatsApp Image 2025-05-20 at 09.08.29_85e9a12f.jpg" alt="Main School Building">
+                    <figcaption>Having fun at Accra Zoo</figcaption>
                 </figure>
                 <figure class="card">
-                    <img src="gallery images/schools w.jpg" alt="Community Gathering">
-                    <figcaption>Community Gathering</figcaption>
+                    <img src="gallery images/a-zoo.2.jpg" alt="Community Gathering">
+                    <figcaption>We hope the crocodiles don't get them</figcaption>
                 </figure>
             </div>
+            
         </div>
     </main>
+    <footer>
+       <p>Visit us<a href="contact.html">Here</a></p>
+        <div class="end">
+            <p>&copy Ryan's Group</p>
+        </div>    
+    </footer> 
 </body>
 </html>
 
