--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
         <header>
             <div class="nav">
-                <label ><img src="img/agape.png" alt=""> Agape</label>
+                <label ><img src="/AgapeWebsite/img/agape.png" alt=""> Agape</label>
                 <nav>
-                    <a href="" class="col">Home</a>
+                    <a href="index.html" class="col">Home</a>
                     <a href="" class="line"> | </a>
-                    <a href="">About</a>
+                    <a href="about.html">About</a>
                     <a href="" class="line"> | </a>
-                    <a href="gallery images/">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                     <a href="" class="line"> | </a>
                     <a href="contact.html">Contact</a>
                     <button>Enroll Now</button>
@@ -41,7 +41,7 @@
           <div class="cor">
             <figure>
                 <img src="img/1.png" alt="">
-                <h1 class="kind">Kindergarten <h3>K4-KS</h3></h1>
+                <h1 class="kind">Kindergarten <h3>K3-K5</h3></h1>
                 <figcaption>
                     <span class="s1">With Agape's strong phonics-based curriculum, preschoolers begin reading and writing in K4. By the end of K5, each student is able to read.</span>
                 </figcaption>
@@ -63,14 +63,14 @@
           </div>
           <div class="counter">
             <!-- Elfsight Number Counter | Untitled Number Counter -->
-<script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-3a40a87f-b9a0-456e-bd5a-8d1521bbf3a0" data-elfsight-app-lazy></div>
+            <script src="https://static.elfsight.com/platform/platform.js" async></script>
+            <div class="elfsight-app-3a40a87f-b9a0-456e-bd5a-8d1521bbf3a0" data-elfsight-app-lazy></div>
           </div>
           <div class="goal">
             <label for="">Our Goals</label>
             <div class="goal-info">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi tempora mollitia asperiores aliquid rerum, ratione blanditiis facilis maiores cum, beatae aut ea, impedit hic. Facilis impedit consequuntur praesentium quasi odit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae similique consequatur architecto laudantium nam debitis odio dicta! Libero suscipit at harum, possimus nihil eos expedita reprehenderit tempore amet veniam molestias.</p>
-                <img src="img/school-desks-in-a-classroom.webp" alt="">
+                <img src="/AgapeWebsite/img/school-desks-in-a-classroom.webp">
             </div>
             <div class="goal-btn">
                     <button>Learn More</button>
