--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="" class="line"> | </a>
-      <a href="">About</a>
+      <a href="about.html">About</a>
       <a href="" class="line"> | </a>
       <a href="gallery.html">Gallery</a>
       <a href="" class="line"> | </a>
-      <a href="" class="col" >Contact</a>
+      <a href="contact.html" class="col" >Contact</a>
       <button>Enroll Now</button>
     </nav>
   </div>
